--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-firebase/ml": "^8.4.7",
     "@react-native-firebase/ml-vision": "^7.4.13",
     "expo": "~43.0.0",
+    "expo-document-picker": "~10.0.3",
     "expo-image-picker": "~11.0.3",
     "expo-splash-screen": "~0.13.3",
     "expo-status-bar": "~1.1.0",
